--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -2017,6 +2017,9 @@
     <ClInclude Include="include\mquicontrollersimple.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="include\mqnetreception.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
     <ClInclude Include="include\imagepointlist.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
