Add net message callbacks related types

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -673,6 +673,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\netdplaysession.h" />
     <ClInclude Include="include\netmessages.h" />
     <ClInclude Include="include\netmsg.h" />
+    <ClInclude Include="include\netmsgcallbacks.h" />
     <ClInclude Include="include\netmsghooks.h" />
     <ClInclude Include="include\netmsgmapentry.h" />
     <ClInclude Include="include\netmsgutils.h" />
