--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -256,6 +256,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\mapinterf.cpp" />
     <ClCompile Include="src\mempool.cpp" />
     <ClCompile Include="src\menubase.cpp" />
+    <ClCompile Include="src\menuflashwait.cpp" />
     <ClCompile Include="src\menulord.cpp" />
     <ClCompile Include="src\menunewmap.cpp" />
     <ClCompile Include="src\menunewskirmish.cpp" />
@@ -580,6 +581,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\mempool.h" />
     <ClInclude Include="include\menubase.h" />
     <ClInclude Include="include\menubaseeditor.h" />
+    <ClInclude Include="include\menuflashwait.h" />
     <ClInclude Include="include\menulord.h" />
     <ClInclude Include="include\menunewmap.h" />
     <ClInclude Include="include\menunewskirmish.h" />
