Add functions related to CNetMsgMapEntry creation

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -298,6 +298,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\netmsg.cpp" />
     <ClCompile Include="src\netmsgcallbacks.cpp" />
     <ClCompile Include="src\netmsghooks.cpp" />
+    <ClCompile Include="src\netmsgmapentry.cpp" />
     <ClCompile Include="src\netmsgutils.cpp" />
     <ClCompile Include="src\ordercat.cpp" />
     <ClCompile Include="src\originalfunctions.cpp" />
