--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -786,6 +786,9 @@
     <ClCompile Include="src\netmsgcallbacks.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="src\netmsgmapentry.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
     <ClCompile Include="src\menuflashwait.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
