--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -277,6 +277,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\menulord.cpp" />
     <ClCompile Include="src\menunewmap.cpp" />
     <ClCompile Include="src\menunewskirmish.cpp" />
+    <ClCompile Include="src\menunewskirmishmulti.cpp" />
     <ClCompile Include="src\menunewskirmishsingle.cpp" />
     <ClCompile Include="src\menuphase.cpp" />
     <ClCompile Include="src\menuphasehooks.cpp" />
@@ -629,6 +630,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\menulord.h" />
     <ClInclude Include="include\menunewmap.h" />
     <ClInclude Include="include\menunewskirmish.h" />
+    <ClInclude Include="include\menunewskirmishmulti.h" />
     <ClInclude Include="include\menunewskirmishsingle.h" />
     <ClInclude Include="include\menuphase.h" />
     <ClInclude Include="include\menuphasehooks.h" />
