Add CRoomPasswordInterf popup dialog

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -343,6 +343,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\registeraccountinterf.cpp" />
     <ClCompile Include="src\restrictions.cpp" />
     <ClCompile Include="src\roomclientjoin.cpp" />
+    <ClCompile Include="src\roompasswordinterf.cpp" />
     <ClCompile Include="src\roomscallback.cpp" />
     <ClCompile Include="src\roomservercreation.cpp" />
     <ClCompile Include="src\scenariodata.cpp" />
@@ -764,6 +765,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\resetstackext.h" />
     <ClInclude Include="include\restrictions.h" />
     <ClInclude Include="include\roomclientjoin.h" />
+    <ClInclude Include="include\roompasswordinterf.h" />
     <ClInclude Include="include\roomscallback.h" />
     <ClInclude Include="include\roomservercreation.h" />
     <ClInclude Include="include\scenariodata.h" />
