Add ObjectSelectionData structure

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -754,6 +754,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\mqnetplayerclient.h" />
     <ClInclude Include="include\netplayerinfo.h" />
     <ClInclude Include="include\networkpeer.h" />
+    <ClInclude Include="include\objectselection.h" />
     <ClInclude Include="include\ordercat.h" />
     <ClInclude Include="include\originalfunctions.h" />
     <ClInclude Include="include\pathinfolist.h" />
