--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -2272,6 +2272,9 @@
     <ClInclude Include="include\cursorhandle.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="include\tasktilehighlight.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
     <ClInclude Include="include\midfreetask.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
