--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -183,6 +183,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\batviewer2dengine.cpp" />
     <ClCompile Include="src\bindings\dynupgradeview.cpp" />
     <ClCompile Include="src\bindings\idview.cpp" />
+    <ClCompile Include="src\bindings\leaderview.cpp" />
     <ClCompile Include="src\bindings\locationview.cpp" />
     <ClCompile Include="src\bindings\point.cpp" />
     <ClCompile Include="src\bindings\scenariovariableview.cpp" />
@@ -478,6 +479,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\batviewerutils.h" />
     <ClInclude Include="include\bindings\dynupgradeview.h" />
     <ClInclude Include="include\bindings\idview.h" />
+    <ClInclude Include="include\bindings\leaderview.h" />
     <ClInclude Include="include\bindings\locationview.h" />
     <ClInclude Include="include\bindings\point.h" />
     <ClInclude Include="include\bindings\scenariovariableview.h" />
