--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -181,6 +181,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\battleviewerinterfhooks.cpp" />
     <ClCompile Include="src\batunitanim.cpp" />
     <ClCompile Include="src\batviewer2dengine.cpp" />
+    <ClCompile Include="src\bindings\attackview.cpp" />
     <ClCompile Include="src\bindings\dynupgradeview.cpp" />
     <ClCompile Include="src\bindings\idview.cpp" />
     <ClCompile Include="src\bindings\leaderview.cpp" />
@@ -478,6 +479,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\batviewer.h" />
     <ClInclude Include="include\batviewer2dengine.h" />
     <ClInclude Include="include\batviewerutils.h" />
+    <ClInclude Include="include\bindings\attackview.h" />
     <ClInclude Include="include\bindings\dynupgradeview.h" />
     <ClInclude Include="include\bindings\idview.h" />
     <ClInclude Include="include\bindings\leaderview.h" />
