Move removeModifierHooked to midunithooks

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -320,6 +320,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\midunitdescriptorhooks.cpp" />
     <ClCompile Include="src\midunitgroup.cpp" />
     <ClCompile Include="src\midunit.cpp" />
+    <ClCompile Include="src\midunithooks.cpp" />
     <ClCompile Include="src\modifierutils.cpp" />
     <ClCompile Include="src\mqrect.cpp" />
     <ClCompile Include="src\multilayerimg.cpp" />
@@ -720,6 +721,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\midunitdescriptor.h" />
     <ClInclude Include="include\midunitdescriptorhooks.h" />
     <ClInclude Include="include\midunitgroup.h" />
+    <ClInclude Include="include\midunithooks.h" />
     <ClInclude Include="include\midvillage.h" />
     <ClInclude Include="include\modifgroup.h" />
     <ClInclude Include="include\modifierutils.h" />
