--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -801,7 +801,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\sitemerchantinterf.h" />
     <ClInclude Include="include\smartptr.h" />
     <ClInclude Include="include\sortedcapitalracelist.h" />
-    <ClInclude Include="include\sortedlist.h" />
+    <ClInclude Include="include\d2set.h" />
     <ClInclude Include="include\movepathhooks.h" />
     <ClInclude Include="include\sortedpointlist.h" />
     <ClInclude Include="include\sortedracelist.h" />
