--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -1261,9 +1261,6 @@
     <ClInclude Include="include\batattackshatter.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="include\sortedlist.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
     <ClInclude Include="include\targetslist.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
@@ -2333,6 +2330,9 @@
       <Filter>Файлы заголовков\bindings</Filter>
     </ClInclude>
     <ClInclude Include="include\d2list.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="include\d2set.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
